# openzt-eval

./: .gitignore  CLAUDE.md  README.md  capture_outputs.py  cargo-orchestrator  example.py  pyproject.toml  run_tests.py
apps/cargo-orchestrator-cli/: README.md  pyproject.toml
apps/cargo-orchestrator-cli/cargo_orchestrator_cli/: __init__.py  __main__.py  cli.py
apps/openzt-eval/: .env.example  README.md  example_tests.json  pyproject.toml  rust_eval_tests.json  test_results.json
apps/openzt-eval/examples/: rust_build_example.py  simple_rust_test.py
apps/openzt-eval/openzt_eval/: __init__.py  __main__.py  cli.py  evaluator.py  models.py  scorers.py
cargo_orchestrator/: __init__.py  builder.py  cli.py
test_data/: error_output_human.txt  error_output_json.txt  warning_output_human.txt  warning_output_json.txt
test_projects/clippy_project/: Cargo.toml
test_projects/clippy_project/src/: main.rs
test_projects/error_project/: Cargo.toml
test_projects/error_project/src/: main.rs
test_projects/rust_eval_test/: Cargo.toml
test_projects/rust_eval_test/src/: lib.rs
test_projects/success_project/: Cargo.toml
test_projects/success_project/src/: main.rs
test_projects/warning_project/: Cargo.toml
test_projects/warning_project/src/: main.rs
tests/: test_cargo_orchestrator.py
