[project]
name = "cargo-orchestrator"
version = "0.1.0"
description = "A Python library for running cargo build and parsing its output"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cargo-orchestrator = "cargo_orchestrator.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

