[project]
name = "cargo-orchestrator-cli"
version = "0.1.0"
description = "CLI tool for cargo-orchestrator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cargo-orchestrator",
]

[tool.uv.sources]
cargo-orchestrator = { workspace = true }

[project.scripts]
cargo-orchestrator = "cargo_orchestrator_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]