[project]
name = "openzt-eval"
version = "0.1.0"
description = "Model evaluation tool using lmstudio and braintrust"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "braintrust",
    "autoevals",
    "lmstudio",
    "pydantic>=2.0",
    "httpx",
    "rich",
    "openai",
    "gitpython",
    "cargo-orchestrator",
]

[project.scripts]
openzt-eval = "openzt_eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openzt_eval"]

[tool.uv.sources]
cargo-orchestrator = { workspace = true }